--- a/bp/index.html
+++ b/bp/index.html
@@ -3,9 +3,6 @@
 
 	battleplan <ed@irc.rizon.net>, MIT-licensed
 	https://dootnode.org/ed/c95/bp.html
-	
-	TODO:
-		https://github.com/nodeca/pako  // for localstore
 
 -->
 <meta charset="utf-8">
@@ -178,7 +175,7 @@ table {
 	border-collapse: collapse;
 }
 td {
-	padding: .5em;
+	padding: .7em .5em;
 	border: 3px solid transparent;
 	border-width: 0 3px;
 }
@@ -330,6 +327,16 @@ a#bdel_yes {
 #vurls_list a:before {
 	content: '🔖 ';
 }
+#added_inf {
+	padding: .2em .3em;
+}
+#added_inf span:after {
+	content: ': ';
+}
+#added_inf span {
+	color: #c37;
+	font-size: .8em;
+}
 
 
 </style>
@@ -350,6 +357,7 @@ a#bdel_yes {
 		</a></div>
 	</div>
 	<div id="topsub">
+		<div id="added_inf" class="viewctl">// info about added items</div>
 		<div id="tabh_col" class="viewctl">
 			<!-- will be automatically populated with a cell jumplist which fits the device screen -->
 		</div>
@@ -358,7 +366,7 @@ a#bdel_yes {
 			><input id="trow_out" value="parser out"
 			></input>
 		</div>
-		<div id="srchinf">
+		<div id="srchinf" class="viewctl">
 			<!-- will contain search results info -->
 		</div>
 	</div>
@@ -459,7 +467,8 @@ a#bdel_yes {
 </div>
 <div id="vpurgedb" class="modal">
 	<p>could not write the database into localStore; it is probably full.</p>
-	<p>delete the database of another day below by clicking it, afterwards day <span id="attempted_day">N</span> will be attempted again:</p>
+	<p>delete the database of another day below by clicking it</p>
+	<p>afterwards, another attempt will be made to save the day <span id="attempted_day">N</span> DB:</p>
 	<div id="purgelist"></div>
 </div>
 <div id="site">
@@ -477,6 +486,7 @@ a#bdel_yes {
 		</table>
 	</div>
 </div>
+<script src="lz-string.min.js"></script>
 <script>
 
 // だけど僕はそのままの
@@ -506,7 +516,7 @@ var render = null;  // fp
 var empty_row_msg = '???';
 var busted_localstore = false;
 var pending_day_db = null;
-//var nfail = 1;
+var nfail = 0;
 
 
 var ALLROWS = '';
@@ -747,7 +757,10 @@ function ev_chday(e) {
 	hide_modals();
 	var words = this.innerHTML.split(' ');
 	var nday = parseInt(words[words.length-1], 10);
-	load_day(nday);
+	inf(['unpacking day ' + nday]);
+	lol(function() { lol(function() {
+		load_day(nday);
+	})});
 }
 
 
@@ -769,9 +782,13 @@ function load_day(day) {
 	ebi('bmenu_day').innerHTML = '📆 Change day (now: ' + active_day + ')';
 	ebi('bmenu_dload').innerHTML = '📲 Download DB for Day ' + active_day;
 	
-	loaded = localStorage.getItem('day' + active_day);
-	if (loaded == null)
-	{
+	var compressed = true;
+	loaded = localStorage.getItem('zday' + active_day);
+	if (loaded == null) {
+		loaded = localStorage.getItem('day' + active_day);
+		compressed = false;
+	}
+	if (loaded == null) {
 		warn([
 			"<strong>== Day " + active_day + " database not downloaded ==</strong>",
 			"Use the menu button top right;",
@@ -780,6 +797,15 @@ function load_day(day) {
 		]);
 		return false;
 	}
+	if (compressed)
+		try {
+			loaded = LZString.decompressFromUTF16(loaded);
+		}
+		catch (ex) {
+			loaded = '[]';
+			alert('failed to unpack the circle/booth database; you will still be able to export your JSON while I figure out what went wrong (sorry)');
+		}
+	
 	dbday = JSON.parse(loaded);
 	
 	MAXNCOL = 0;
@@ -804,24 +830,38 @@ function load_day(day) {
 	return true;
 }
 function load_sel() {
-	loaded = localStorage.getItem('sel' + active_day);
-	if (loaded == null)
-	{
+	var compressed = true;
+	loaded = localStorage.getItem('zsel' + active_day);
+	if (loaded == null) {
+		loaded = localStorage.getItem('sel' + active_day);
+		compressed = false;
+	}
+	if (loaded == null) {
 		dbsel = [];
 		inf([
 			"<strong>== Loaded day " + active_day + " ==</strong>",
 			"Start adding some booths:",
-			"Select «<u>View all booths</u>» in the menu"
+			"Select «<u>Show all booths</u>» in the menu"
 		]);
+		return true;
 	}
-	else
-		dbsel = JSON.parse(loaded);
+	if (compressed)
+		try {
+			loaded = LZString.decompressFromUTF16(loaded);
+		}
+		catch (ex) {
+			croak('failed to unpack your shopping list database (fuck)');
+		}
 	
+	dbsel = JSON.parse(loaded);
 	return true;
 }
 function save_sel() {
 	try {
-		localStorage.setItem('sel' + active_day, JSON.stringify(dbsel));
+		var jsontxt = JSON.stringify(dbsel);
+		var packed = LZString.compressToUTF16(jsontxt);
+		localStorage.setItem('zsel' + active_day, packed);
+		localStorage.removeItem('sel' + active_day);
 	}
 	catch (ex) {
 		busted_localstore = true;
@@ -839,22 +879,22 @@ function warn(lines) { showmsg('fc0', lines); }
 function inf(lines) { showmsg('ad6', lines); }
 
 
-function put_day_db(jsontext) {
-	if (jsontext === undefined)
-		jsontext = pending_day_db;
-	else
-		pending_day_db = jsontext;
+function put_day_db(jsontxt) {
+	if (jsontxt !== undefined)
+		pending_day_db = LZString.compressToUTF16(jsontxt);
 	
 	try {
-		//if (nfail-- > 0) throw 42;
-		localStorage.setItem('day' + active_day, jsontext);
-		load_day();
-		return true;
+		if (nfail-- > 0) throw 42;
+		localStorage.removeItem('day' + active_day);
+		localStorage.setItem('zday' + active_day, pending_day_db);
 	}
 	catch (ex) {
 		full_localstore();
 		return false;
 	}
+	load_day();
+	
+	return true;
 }
 function dl_done(v) {
 	if (this.status != 200)
@@ -862,8 +902,12 @@ function dl_done(v) {
 		alert('** ERROR ' + this.status + ' FROM SERVER **\n\n' + this.responseText);
 		return;
 	}
-	
-	return put_day_db(this.responseText);
+
+	inf(['compressing database']);
+	var jsontxt = this.responseText;
+	lol(function() { lol(function() {
+		put_day_db(jsontxt);
+	})});
 }
 function dl_error() {
 	alert('error downloading db from server');
@@ -890,7 +934,7 @@ function ev_dload() {
 	req.send();
 
 	ebi('dl_day').innerHTML = active_day;
-	ebi('dl_progress').innerHTML = '0%';
+	ebi('dl_progress').innerHTML = '0';
 	hide_modals();
 	show('vdl');
 }
@@ -1223,9 +1267,39 @@ function ev_score(e) {
 function ev_added() {
 	hide_viewctls();
 	ebi('tabh_h1').innerHTML = 'Shopping list';
+	ebi('site').style.paddingTop = '5em';
 	show('tabh_h1');
+	show('added_inf');
 	render = function() {
 		ev_cir(locsort, true);
+		
+		var have = 0;
+		var todo = 0;
+		var scorekeys = ['-'];
+		for (var a = 1; a < 10; a++)
+			scorekeys.push(a);
+		
+		var scores = {};
+		for (var a = 0; a < scorekeys.length; a++)
+			scores[scorekeys[a]] = 0;
+		
+		for (var a = 0; a < dbsel.length; a++) {
+			if (dbsel[a]['done'])
+				have++;
+			else {
+				todo++;
+				scores[dbsel[a]['sc']]++;
+			}
+		}
+		
+		var html = [];
+		html.push('<span>done</span>' + have);
+		html.push('<span>todo</span>' + todo);
+		
+		for (var a = 0; a < scorekeys.length; a++)
+			html.push('<span>' + scorekeys[a] + '</span>' + scores[scorekeys[a]]);
+		
+		ebi('added_inf').innerHTML = html.join(' ');
 	};
 	render();
 }
@@ -1255,15 +1329,29 @@ function ev_export(e) {
 }
 function gen_export() {
 	var ret = {};
-	var keys = ['sel1', 'sel2', 'sel3'];
 	for (var a = 1; a <= 3; a++) {
-		var kt = localStorage.getItem('sel'+a);
-		if (kt == null)
-			continue;
+		try {
+			var kt = localStorage.getItem('sel'+a);
+			if (kt != null)
+				ret['sel'+a] = JSON.parse(kt);
+		}
+		catch {
+			alert('failed to export Uncompressed selection db ' + a);
+		}
 		
-		ret['sel'+a] = JSON.parse(kt);
+		try {
+			kt = localStorage.getItem('zsel'+a);
+			if (kt != null) {
+				var unpacked = LZString.decompressFromUTF16(kt);
+				ret['sel'+a] = JSON.parse(unpacked);
+			}
+		}
+		catch {
+			alert('failed to export Compressed selection db ' + a);
+		}
 	}
 	if (busted_localstore) {
+		alert('emergency export of day ' + active_day + ' in effect');
 		ret['sel'+active_day] = dbsel;
 	}
 	return JSON.stringify(ret).replace(/},{"loc":"/g, '},\n{"loc":"');
@@ -1281,11 +1369,15 @@ function import_text(txt) {
 	lol(function() { lol(function() {
 		var iv = JSON.parse(txt);
 		for (var a = 1; a <= 3; a++) {
-			var k = 'sel' + a;
-			localStorage.removeItem(k);
-			if (iv[k])
-				localStorage.setItem(
-					k, JSON.stringify(iv[k]));
+			var uk = 'sel' + a;
+			var ck = 'zsel' + a;
+			localStorage.removeItem(uk);
+			localStorage.removeItem(ck);
+			if (iv[uk]) {
+				var jsonstr = JSON.stringify(iv[uk]);
+				var packed = LZString.compressToUTF16(jsonstr);
+				localStorage.setItem(ck, packed);
+			}
 		};
 		load_day(active_day);
 	})});
@@ -1567,13 +1659,18 @@ function ev_url_delete(e) {
 }
 function full_localstore() {
 	var html = [];
-	for (var a = 1; a <= 3; a++) {
+	var keys = ['day1','day2','day3','zday1','zday2','zday3'];
+	for (var a = 0; a < keys.length; a++)
 		try {
-			var len = localStorage.getItem('day' + a).length;
-			html.push('<a href="#" nday="' + a + '">day ' + a + ' (' + Math.round(len/1024) + ' KiB)</a>');
+			var len = localStorage.getItem(keys[a]).length;
+			var trait = 'uncompressed';
+			if (keys[a].indexOf('z') == 0)
+				trait = '';
+			
+			html.push('<a href="#" skey="' + keys[a] + '">' + trait + ' day ' + keys[a].slice(keys[a].length-1) + ' (' + Math.round(len/1024) + ' KiB)</a>');
 		}
 		catch { }
-	}
+	
 	if (html.length == 0)
 		html.push('<h1>actually nevermind you broke it</h1><p>check if your disk is full i guess</p>');
 	
@@ -1588,13 +1685,12 @@ function full_localstore() {
 }
 function ev_purge_day(e) {
 	ebi('purgelist').innerHTML = '<h2>writing...</h2>';
-	var nday = this.getAttribute('nday');
+	var key = this.getAttribute('skey');
 	lol(function() { lol(function() {
-		localStorage.removeItem('day' + nday);
+		localStorage.removeItem(key);
 		put_day_db();
 	})});
 }
-
 
 
 ebi('bmenu').onclick = show_menu;
@@ -1651,5 +1747,7 @@ load_day();
 cat Documents/all-comiket-rows.txt | shuf | while IFS= read -r x; do printf '{"loc":"2%s01a","sc":"7"},\n' "$x"; done > ~/Downloads/battleplan-shuffled.json 
 
 while true; do for sc in 4 5 6 7 8 9 8 7 6 5; do IFS= read -r row; [ -z "$row" ] && break; printf '{"loc":"2%s01a","sc":"%s"},\n' "$row" "$sc"; done; [ -z "$row" ] && break; done < <(cat ~/Documents/all-comiket-rows.txt;) > ~/Downloads/battleplan-rainbow.json 
+
+{ echo '{"sel2":['; r=3; for row in シ ス セ ソ タ チ ツ テ ト ナ ニ ヌ ネ; do for n in {01..91}; do for c in a b; do r=$((r+1)); [ $r -gt 9 ] && r=4; printf '{"loc":"2東%s%s%s","sc":"%s"},\n' $row $n $c $r; done; done; done; } | xclip -i -selection clipboard
 */
 </script></body></html>
